--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Belly Button Biodiversity</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/style.css"> 
 </head>
 
 <body>
-
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+      <div class="jumbotron col-md-12 col-sm-12 text-center">
+        <div class ="center">
+        <img src = "static/images/EColi.jpg" width="800" height="300" class="center">
+            <h1 class="rainbow-lr" style="color:rgb(17, 17, 128)"><b>Belly Button Biodiversity Dashboard</b></h1>
+            <p><i>Use the interactive charts below to explore the dataset</i></p>
+            <h4>This project collected information about bacteria data from volunteers' belly buttons. Based on this data, 
+                we created a interactive dashboard to visulize each volunteer's belly button biodiversity.</h4>
+            <h4>Select a Test Subject ID number from the dropdown menu. The individual's demographic information table and their charts will automatically respond.</h4>
+        </div>
       </div>
     </div>
     <div class="row">
@@ -34,15 +40,20 @@
       </div>
       <div class="col-md-5">
         <div id="bar"></div>
+        <h5> In this bar chart, we can see the top ten bacterial species in the test subject's navel in descending order.</h5>
       </div>
+      
       <div class="col-md-5">
         <div id="gauge"></div>
+        <h5> This guages shows how often our test subject was washing their belly button per a week.</h5>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
         <div id="bubble"></div>
-      </div>
+        <h5><center>This bubble scatter chart shows Operational Taxonomic Units of bacteria cultures per a sample from our test subject.</center></h5>
+        
+        </div>
     </div>
   </div>
 
